<resources>
    <string name="app_name">DashWeather</string>

    <string name="pref_bar_title">DashWeather Settings</string>

    <string name="pref_temp_unit_title">Temperature Unit</string>
    <string name="pref_temp_unit_value_c">\u00B0C</string>
    <string name="pref_temp_unit_value_f">\u00B0F</string>

    <string name="pref_gps_title">Automatic</string>
    <string name="pref_loc_title">Location</string>
    <string name="pref_lat_title">Latitude</string>
    <string name="pref_lon_title">Longitude</string>

    <string name="pref_api_key_title">API Key</string>

    <string name="pref_api_key_how_to_title">How to get an API key?</string>

    <string name="pref_error_title_permission_not_granted">Permission is not granted.</string>
    <string name="pref_error_button_settings">settings</string>

    <string name="error_title">Error</string>
    <string name="error_body">Click here to set up</string>

    <string name="rel_humidity">Humidity</string>
    <string name="chance_of_rain">Chance of Rain</string>

</resources>
